--- a/css/style.scss
+++ b/css/style.scss
@@ -2,26 +2,29 @@
     margin: 0;
     padding: 0;
 }
- li{
+ul.parent{
     list-style: none;
-    
-}
-
-ul{
     display: flex;
-    justify-content: flex-end;
-    background-color:grey;
-    li{
-    text-decoration: none;
-    text-transform: uppercase;
-    color:#fff;
-    } 
+    justify-content: center;
+    background-color: gray;
+}
 li{
-    &:hover{
-        color:red;
+    position: relative;
+    a{
+        padding: 10px;
+        text-transform: uppercase;
+        text-decoration: none;
+        font-size: 18px;
+        color: #FFF;
+        &:hover{
+            color:red;
+        }
+        ul{
+            position: type-of($value: 24px);
+            display: none;
+            background-color: gray;
+            width: 150px;
+            padding: 5px;
+        }
     }
-}
-li{
-   padding: 15px;
-}
 }
